--- a/css/grey_r2/formatting.css
+++ b/css/grey_r2/formatting.css
@@ -12,8 +12,7 @@ width: 21px;
 height: 21px;
 margin-left: 0;
 margin-right: 0;
-border: 1px solid #D6D3CE;
-background-color: #FFFFFF;
+border: 1px solid #717171;
 margin-right: 2px;
 /* text-indent works badly on IE versions < 8, as IE treats inputs as text */
 /*text-indent: -5000px;*/
@@ -27,7 +26,7 @@ vertical-align: middle;
 }
 
 *.f_button:hover, *.f_button.selected {
-background-color: #B5BED6;
+background-color: #ff6000;
 border-color: #000000;
 }
 
